Fix overflow x hidden

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,4 +1,6 @@
 #app {
+  overflow-x: hidden;
+  
   &.-open {
     overflow: hidden;
 
